added topic endpoints